fixed a bug where the button appeared on top of the react quill componenet, made the button smaller for the publish feature/

--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -29,7 +29,6 @@
     flex-direction: column;
     width: 100%;
     height: calc(100vh - 280px);
-    min-height: 400px;
     overflow-y: auto;
 }
 
